<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">
  
  <header
 		android:fragment="com.BoeckEH.pt2.AudioPreferenceFragment"
       	android:title="@string/settings_audioHeader"
       	android:summary="@string/settings_audioSummary" >
  </header>
  <header
 		android:fragment="com.BoeckEH.pt2.RegisterPreferenceFragment"
       	android:title="@string/settings_registerHeader"
       	android:summary="@string/settings_registerSummary">
  </header>
  <header
 		android:fragment="com.BoeckEH.pt2.MiscPreferenceFragment"
       	android:title="@string/settings_miscHeader"
       	android:summary="@string/settings_miscSummary">
  </header>
  <header
 		android:fragment="com.BoeckEH.pt2.SoundCloudPreferenceFragment"
       	android:title="@string/settings_soundCloudHeader"
       	android:summary="@string/settings_soundCloudSummary">
  </header>
 
</preference-headers>


<!-- 
Need in preferences:
    
    SoundCloud Preference page
    	1	SoundCloud enable		-	checkbox
    	2	SoundCloud user name 	-	Text (depends on 1)
    	3	SoundCloud password		-	password Text (depends on 1)
    	4	Update SC on WiFi only	-	checkbox (depends on 1)
    	5	Update in sep thread	-	checkbox (depends on 1) (default on, warn if off)
    	
    Registration Preferences page	
    	1	register					- checkbox
    	2	user name for registration	- Text (depends on 1)
    	3	user password for reg		- Password Text (depends on 1)
    	4	receive notices				- checkbox
    	5	user email for notifications- email text (depends on 4)
    	
    Audio Preferences Page	
    	1	Minutes to practice		- 	number
    	2	Audio level to trigger	-	number % of max
    	3	Quantum time interval	-	number (secs to time once it is triggered)
    	4	Auto gain enable		-	check box
    	5	Auto gain recovery (PID)-	number (depends on 4)
    	
	    Misc Preferences Page
    	1	Save location information	- check box
    	2	Save session practice time 	- check box
    	3	Disable pitch detection		- check box
		4	Show debug					- check box
    	5	Instrument type				- list
    	6	Buffer size					- list
    	7	Sample rate					- list
    	
    		
    	
    Need to save but not have a setting for
    	Screen layout when last shut down
    	Total practice time this session (date and time stamped, keyed on iteration?)
    	Calculated total time vs heard sound time (date and time stamped, keyed on iteration?)
    	Total time running for application
    	Total time practiced for application
    	Save Total practice time this session (date and time stamped, keyed on iteration?)
    	
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_audio" >
        <CheckBoxPreference
            android:key="pref_updateWifi"
            android:title="@string/settings_updateOnlyWifi"
            android:summary="@string/settings_updateOnlyWifiSummary"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_updateAutomatic"
            android:title="@string/settings_updateAutomatic"
            android:summary="@string/settings_updateAutomaticSummary"
            android:defaultValue="true" />
        <ListPreference
            android:key="pref_updateTimeout"
            android:title="@string/settings_updateTimeout"
            android:entries="@array/update_timeout_options"
      		android:entryValues="@array/update_timeout_values"
    		android:dialogTitle="@string/settings_updateTimeoutDialogTitle"
            android:defaultValue="30"
            android:dependency="pref_updateAutomatic"/>
        <ListPreference
            android:key="pref_updateFrequency"
            android:title="@string/settings_updateFrequency"
            android:entries="@array/update_frequency_options"
    		android:entryValues="@array/update_frequency_values"
    		android:dialogTitle="@string/settings_updateFrequencyDialogTitle"
    		android:dependency="pref_updateAutomatic"
            android:defaultValue="5"/>
        <CheckBoxPreference
            android:key="pref_updateStartup"
            android:title="@string/settings_updateOnStartup"
            android:summary="@string/settings_updateOnStartupSummary"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="pref_updateSCUsername"
            android:title="@string/settings_updateSCUsername"
            android:summary="@string/settings_updateSCUsernameSummary"
            android:inputType="textAutoComplete"
            android:defaultValue="Whatever" />
        </PreferenceCategory>
    	
</PreferenceScreen>    	

 -->